--- a/.env.example
+++ b/.env.example
@@ -6,6 +6,10 @@ APP_URL=http://localhost
 
 LOG_CHANNEL=stack
 
+FACEBOOK_TOKEN=
+FACEBOOK_APP_SECRET=
+FACEBOOK_VERIFICATION=
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
